3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix broken banish command: loop logic was weird (skipping one file?).
 server/ban.c
Nicolas Weeger 2007-03-25

Fix Win32 compilation.
 common/player.c: don't declare variables in the middle of the code
 lib/collect.pl.in: use binmode for files
 socket/item.c: idem
Nicolas Weeger 2007-03-24

server/c_wiz.c: fix missing treasure generation for create command in some cases.
Nicolas Weeger 2007-03-24


Changes for 1.10.0:
------------------------------------------------------------------------------
Implement feature request #1528522: Initial items should be applied/worn.
 server/player.c
---
 server/apply.c skill_util.c: keep the AP_NOPRINT flag for subcalls.
---
 server/c_wiz.c: update DM's view when using nodm.
---
 server/apply.c: update player's view when turning on/off a lamp.
---
Implement feature request #1680229: dmhide - glowing things.
 common/map.c: totally ignore hidden DMs for map update.
---
Implement feature request #1669464: Need new command - dmtell.
 include/sproto.h
 server/c_chat.c commands.c
---
server/c_wiz.c: enable 'teleport' to use a partial name.
server/c_misc: 'listen' should be positive.
---
Fix bug #1668283: Crossfire.CreateObjectByName is faulty, by applying
 patch (feature request) #1682802: CreateObjectByName fix/change.
 Code by Yann Chackhoff.
Also fix a crash when teleporting a newly created object.
 server/plugins.c
---
Fix bug #1671102: Generic destroy can remove permanent buttons. The code was
 doing a wrong check related to marked item/destroyer.
Fix bug #1657675: multi-tile buildable object bug (note: one .x11 image though).